Add migration commands to package.json and README.md
- Introduced new migration commands: `migrate:rollback:all`, `migrate:fresh`, and `migrate:status` in package.json.
- Updated README.md to include detailed instructions for running migrations and their statuses.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "node src/server.js",
     "migrate:make": "knex migrate:make",
     "migrate:latest": "knex migrate:latest",
-    "migrate:rollback": "knex migrate:rollback"
+    "migrate:rollback": "knex migrate:rollback",
+    "migrate:rollback:all": "knex migrate:rollback --all",
+    "migrate:fresh": "npm run migrate:rollback:all && npm run migrate:latest",
+    "migrate:status": "knex migrate:status"
   },
   "keywords": ["imap", "mail", "gateway"],
   "author": "",
